--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,9 +1,14 @@
 .friendList{
+    padding: 0;
     display: flex;
     gap: 5px;
 }
 
 .item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center ;
     border: 1px solid black;
     border-radius: 10px;
     width: 70px;
