--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,17 +1,29 @@
 .profile{
+    padding-top: 5px;
     border: 1px solid #000000;
     border-radius: 10px;
-    padding: 12px;
     width: 200px;
+    overflow: hidden;
 }
-
-.stats{
+.description{
     display: flex;
-    gap: 15px;
-    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.stats{
+    padding: 0;
+    margin-bottom: 0;
+    display: flex;
 }
 .statsItem{
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    width: 47px;
+    background-color: grey;
+    padding: 10.5px;
+    border: 1px solid #646464;
 }
